some files neglected

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 			lesswrong
 			London rationalish
 			Annie Duke
+			Noahpinion
 			Julia Galef (so you think you're good at whodunnits...)	
 			Jeffrey Ladish
 			rob wiblin, katja grace, Carl Shulman whoever that is
