--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	Different rooms
 	Rotate and it looks ok
 
+	"sign in as existing player"
+	you may well sell with nothing on board if you jusst accidentally bought
+
+	Use ip address as socket id
 
 	Script for "murder mystery", sock puppets:
         Ahh help I'm being murdered
@@ -50,10 +54,11 @@
         Testing Groups:
 			EE slack: Pontus, Nicky, Chris Makler
 			Martin Todd, Diana, Lal, mum and dad
-			Eleanor, Stephane, Rachel, Rory and Joel
 			Chigozie, Devon, Florian and Jacob
+			Eleanor, Stephane, Rachel, Rory and Joel
 			Ivan, Ivan, Nina, Katya
 			Edindies: Norgg, Portponkey
+		Serious folks (need rooms by this point, they'll want to spread it)
 			London rationalish: Jason Sackey, Noah Siegel, Phil Hazelden, Maciej
 			->Then ask them about, facebook rationalists: Vladyslav, Jeffrey Ladish
 			York philosophy: Simon Newey, Seb, Dan, Joe Peach
@@ -75,6 +80,7 @@
 			r/ssc
 			r/prediction markets must exist
 			lesswrong
+			SSC open thread
 			Annie Duke
 			Noahpinion
 			Julia Galef (so you think you're good at whodunnits...)	
