suspect appearance delay

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		confirm all have received them
 		Then they appear
 	Bugs
+		If your display goes to sleep, the socket goes
 		Facebook web browser full screen
 		This-is-not-an-advert in order to make sounds play
 		Check that the connection is ok, took several seconds to send you your pic back
