--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!--
+	Room at bottom for judgement, id, cash
+	Make sure it all works on a square screen
+	Judgement mode
+		Your bets (not others') are visible in the background. Greyed out colors
+		But they zoom into place
+		When you change which suspects are confirmed, the scaling takes a little time to respond
 	Bugs
 		If your display goes to sleep, the socket goes
 		Facebook web browser full screen
 		This-is-not-an-advert in order to make sounds play
 		Check that the connection is ok, took several seconds to send you your pic back
-	Just a video where you explain it
+	Make a video where you play it
 
 
 
@@ -42,6 +48,7 @@
 		-how much money they get
 		-how much extra money they start with
 		-When the suspect appears, a 25-second timer starts. If the suspect's bets are trading at 1:1 when it's done, the manipulator gets N dollars.
+	Another fun thing would be a bot mode where you see that wealth gets reallocated pretty quickly
 
 	"World's shortest mrder mystery"
 	Script for "murder mystery", sock puppets:
@@ -69,6 +76,16 @@
         B: I liked him a lot, although I do wish he would keep away from my poisonous frog collection
         Hmm, there is also his ex wife, who appears to have absconded to the bahamas
         Oh, it turns out it was me
+
+	Manipulator  will get 1 googol dollars from the market price being above 1
+	So they're willing to lose .9999 = 1 googol dollars
+	To bet, if there are 10 bets
+
+	The game should be about crafting trajectories for objects using whatever
+	Then you can have nice shit in the levels on top of that, rendered with whatever hotness makes sense
+	Maybe it should be completely about making loops, no beginning or end, no worry about controls / seeing the whole thing when it's embedded in an article
+
+
 
     Could also do this with:
         Who's going to end up with whom in a rom com
