small changes including to readme

--- a/index.html
+++ b/index.html
@@ -169,14 +169,17 @@
 	
 	<br></br>
 
-	<h3><em>Murder, She Bet</em> is a game about putting your money where your (probabilistic) mouth is.
-	The rules are:</h3>
+	<center><h3><em>Murder, She Bet</em> is a game about putting your money where your <del>mouth</del> probabilistic beliefs are</h3></center>
+	<h3>The rules:</h3>
 	<ol>
-		<li>You will watch a Murder Mystery, with several <em>suspects</em> that may be <em>guilty</em>.</li>
+		<li>Players will watch a Murder Mystery, with several <em>suspects</em> that may be <em>guilty</em>.</li>
 		<li>Any player can raise suspicion of a new suspect they would like to bet on.</li>
-		<li>The guilt of the suspects is determined when, and ONLY WHEN, the credits roll.</li>
-		<li>Bets on guilty suspects will turn into money, bets on innocent suspects turn into nothing.</li>
+		<li>Bets may be bought and sold all the way up to when the credits roll.</li>
+		<li>Upon the rolling of the credits, the guilt of the suspects must be settled.</li>
+		<li>Bets on guilty suspects will turn into money; bets on innocent suspects will vanish.</li>
 	</ol>
+
+	<br></br>
 
 	<center><iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
 		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
