local storage hopefully working, suspect panels filling the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		Your bets (not others') are visible in the background
 		They zoom into place. Your cash too
 		When you change which suspects are confirmed, the scaling takes a little time to respond
-	You can expand the suspect frames and areas to take up more space
+	Portraits with appropriate stretch
 	Bugs
 		You get black frickin squares. Refreshing makes it go away...
 		PROBABLY If your display goes to sleep, the socket goes
@@ -88,20 +88,6 @@
 
 
 
-    Could also do this with:
-        Who's going to end up with whom in a rom com
-        Who will win football
-        
-    TODO
-        Removing suspects (iff no bets)
-        Marking winner
-        Sfx
-            cha ching https://freesound.org/people/Lucish_/sounds/554841/
-            "Dumf, no money"]
-		"Lobbyist mode"
-			when some new suspect is introduced, a random player gets assigned:
-			Twice/thrice the cash of anyone else
-
     Send to
         Testing Groups:
 			EE slack: Pontus, Nicky, Chris Makler
@@ -172,8 +158,8 @@
 	<center><h3><em>Murder, She Bet</em> is a game about putting your money where your <del>mouth</del> probabilistic beliefs are</h3></center>
 	<h3>The rules:</h3>
 	<ol>
-		<li>Players will watch a Murder Mystery, with several <em>suspects</em> that may be <em>guilty</em>.</li>
-		<li>Any player can raise suspicion of a new suspect they would like to bet on.</li>
+		<li>Players will watch a Murder Mystery, with multiple <em>suspects</em> that may be <em>guilty</em>.</li>
+		<li>Suspect characters must be added to the board.</li>
 		<li>Bets may be bought and sold all the way up to when the credits roll.</li>
 		<li>Upon the rolling of the credits, the guilt of the suspects must be settled.</li>
 		<li>Bets on guilty suspects will turn into money; bets on innocent suspects will vanish.</li>
@@ -192,6 +178,9 @@
 	<center><iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
 		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 		allowfullscreen="false"></iframe></center>
+
+	<center>Created by <a href='https://twitter.com/hamish_todd'>@hamish_todd</a></center>
+	<center>More information on the game and its philosophy can be found <a href= 'https://github.com/hamishtodd1/msb/blob/main/README.md'>here</a></center>
 
 	<body>
 		<script src="/socket.io/socket.io.js"></script>
