--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
 
 	<br></br>
 
+	<h3>A good strategy:</h3>
+	<ol>
+		<li>When you look at the board, ignore what's in your hand, just look at the current percentage</li>
+		<li>For each, ask yourself "do I think it's more likely, or less likely, than that, they're guilty?"</li>
+		<li>If you think it's more likely that they did it, eg they are at 20% and you think it's 50%, buy a bet</li>
+		<li>If you think it's less likely than the board does, sell a bet, or if you have none to sell, do nothing</li>
+		<li>Keep doing that! Though don't forget to look up and watch the show sometimes!</li>
+	</ol>
+
+	<br></br>
+
 	<center>Created by <a href='https://twitter.com/hamish_todd'>@hamish_todd</a></center>
 	<center>More information on the game and its philosophy can be found <a href= 'https://github.com/hamishtodd1/msb/blob/main/README.md'>here</a></center>
 
