about to change judgement method significantly

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	Game loses socket when ping stops
 	Server closes a room when all players gone
 	Bugs
+		iphone camera is frozen
 		You get black frickin squares. Refreshing makes it go away...
 		PROBABLY If your display goes to sleep, the socket goes
 		Facebook web browser full screen
@@ -238,8 +239,6 @@
 
 		<script>
 			async function init(socket, gameId) {
-				log("initted")
-
 				initSound()
 
 				// initInstancedMesh()
